<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/workQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"/>
    <Switch
        android:id="@+id/workSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:textOff="@string/no"
        android:textOn="@string/yes" />
    <TextView
        android:id="@+id/workAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workAnswer"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/passQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"/>
    <Switch
        android:id="@+id/passSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:textOff="@string/no"
        android:textOn="@string/yes" />
    <TextView
        android:id="@+id/passAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passAnswer"
        android:layout_marginTop="180dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/ageQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have"
        android:layout_marginTop="220dp"
        android:layout_marginStart="10dp"/>
    <EditText
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/ageAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="260dp"
        android:layout_marginStart="80dp"/>
</RelativeLayout>